# berengario

./: .dockerignore  .env.example  .env.mt.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  PLANNING.md  README.md  TASK.md  aup.html  bulk_ingest.py  docker-compose.mariadb.yml  docker-compose.yml  docker-start.sh  dpa.html  index.html  migrate_kb_structure.py  nginx.conf  privacy.html  pyproject.toml  requirements.txt  run_email_service.py  run_migration.py  run_platform_admin.py  run_web_service.py  style.css  terms.html
.claude/: CLAUDE.md  NOTES.md
.github/workflows/: ci.yml  docker.yml  release.yml
data/config/: allowed_queriers.txt.example  allowed_teachers.txt.example  custom_prompt.txt.example  email_footer.txt.example
db/init/: 01-multi-tenant.sql
docs/: CLI.md  DATABASE_DESIGN.md  DATA_STRUCTURE.md  EMAIL_AUTH_ISSUE.md  EMAIL_PROCESSING_RULES.md  MULTI_TENANCY.md  PHASE2_PLAN.md  PRE_COMMIT_HOOK.md  QUICKSTART.md  README.md  codebase_map.dot  codebase_map.json  codebase_map.md  function_calling_plan.md
migrations/: 001_add_query_tracking_columns.sql  apply_migration.py
scripts/: README.md  berengario-cli  init_conversation_db.py  install-hooks.sh  pre-commit  raginbox-cli  reingest.sh  reingest_documents.py
src/: config.py  demo_phase1.py  llm_utils.py  shared_clients.py
src/api/: api.py  models.py
src/api/admin/: __init__.py  audit_logger.py  backup_manager.py  document_manager.py  whitelist_manager.py
src/api/auth/: __init__.py  dependencies.py  otp_email.py  otp_manager.py  session_manager.py
src/api/routes/: __init__.py  admin.py  analytics.py  auth.py  conversations.py  feedback.py  helpers.py  moderation.py  onboarding.py  query.py  team.py  tenant_admin.py
src/api/static/: admin-billing.js  admin-feedback.js  admin-kb-health.js  admin-moderation.js  admin-usage.js  admin.html  admin.js  app.js  auth.css  feedback.html  feedback.js  index.html  landing.html  landing.js  login.html  login.js  onboarding.html  onboarding.js  style.css  verify.html  verify.js
src/billing/: README.md  __init__.py  paddle_service.py  plans.py  router.py  webhook_handler.py
src/cli/: __init__.py  main.py  utils.py
src/cli/commands/: backup.py  db.py  kb.py
src/document_processing/: description_generator.py  document_processor.py  enhancement_processor.py  file_watcher.py  kb_manager.py  web_crawler.py
src/email/: __init__.py  admin_commands.py  attachment_handler.py  conversation_manager.py  db_manager.py  db_models.py  email_client.py  email_parser.py  email_processor.py  email_sender.py  email_service.py  message_tracker.py  tenant_email_router.py  whitelist_validator.py
src/platform/: __init__.py  backup_import.py  bootstrap.py  component_factory.py  component_resolver.py  db_manager.py  db_session_adapter.py  encryption.py  models.py  provisioning.py  storage.py  tenant_context.py
src/platform_admin/: __init__.py  app.py  models.py
src/platform_admin/routes/: __init__.py  auth.py  health.py  tenants.py
src/platform_admin/static/: index.html  login.html  platform-admin.js
src/rag/: example_questions.py  query_handler.py  query_optimizer.py  rag_engine.py  topic_clustering.py
src/rag/tools/: __init__.py  base.py  calendar_tools.py  context.py  database_tools.py  export_tools.py  pending_actions.py  rag_tools.py  team_tools.py  tool_executor.py  web_search_tools.py  whitelist_tools.py
tasks/: lessons.md
tests/: conftest.py  test_admin_commands.py  test_api_onboarding.py  test_api_team.py  test_api_tenant_admin.py  test_attachment_archival.py  test_attachment_bytes_saving.py  test_attachment_handler.py  test_auth_onboarding.py  test_backup_import.py  test_backup_manager.py  test_billing_plans.py  test_billing_webhook.py  test_context.py  test_conversation_manager_di.py  test_database_tools.py  test_db_manager.py  test_db_models.py  test_description_generator.py  test_document_age.py  test_document_processor.py  test_email_client.py  test_email_parser.py  test_email_processor_mt.py  test_email_sender.py  test_email_service.py  test_email_tenant_router.py  test_enhancement_processor.py  test_example_questions.py  test_file_watcher_mt.py  test_forwarded_detection.py  test_kb_health.py  test_kb_manager.py  test_message_tracker.py  test_moderation_queue.py  test_phase3_integration.py  test_platform_admin.py  test_platform_component_factory.py  test_platform_component_resolver.py  test_platform_db_session_adapter.py  (+14 more)
