[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raginbox"
version = "0.1.0"
description = "A configurable RAG (Retrieval-Augmented Generation) system with email integration for knowledge base management"
authors = [
    {name = "Giorgio Gilestro", email = "giorgio@gilest.ro"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["RAG", "LLM", "knowledge-base", "email", "AI", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core RAG Framework (Python 3.13 compatible)
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-vector-stores-chroma>=0.3.0",

    # Vector Database
    "chromadb>=0.5.0",

    # Document Processing
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",

    # Email Handling (Phase 2)
    "imap-tools>=1.7.0",

    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",

    # Configuration & Environment
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",

    # LLM API
    "openai>=1.50.0",

    # Utilities
    "watchdog>=6.0.0",
    "aiofiles>=24.0.0",

    # Logging
    "structlog>=24.4.0",
]

[project.urls]
Homepage = "https://github.com/gilestrolab/RAGInbox"
Repository = "https://github.com/gilestrolab/RAGInbox.git"
Issues = "https://github.com/gilestrolab/RAGInbox/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]

[project.scripts]
raginbox = "src.demo_phase1:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | data
  | Documents
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "data", "Documents"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
